adding solution to problem 3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 </h1>
 <multiples-of-3-and-5></multiples-of-3-and-5>
 <even-fibonacci-numbers></even-fibonacci-numbers>
+<largest-prime-factor></largest-prime-factor>
