reorganizing file structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <h1>
   {{title}}
 </h1>
-<multiples-of-3-and-5></multiples-of-3-and-5>
-<even-fibonacci-numbers></even-fibonacci-numbers>
-<largest-prime-factor></largest-prime-factor>
+<solutions></solutions>
